fix: broken style (#1112)

--- a/apps/partner-management/components/OutletGrid/OutletGrid.module.css
+++ b/apps/partner-management/components/OutletGrid/OutletGrid.module.css
@@ -3,5 +3,5 @@
 }
 
 .titleAnchor {
-  text-decoration: 'none';
+  text-decoration: none;
 }
